2005-11-09  Zoltan Varga  <vargaz@gmail.com>

	* SortedList.cs: New file.

2005-09-04  David Waite  <mass@akuma.org>

	* LinkedList.cs, LinkedListNode.cs: added implementation of LinkedList<T>

2005-08-08  Kamil Skalski  <nazgul@nemerle.org>

	* Queue.cs, Stack.cs: remove implementation of ICollection<T>,
	since it is no longer in b2 API

2005-06-20  David Waite  <mass@akuma.org>

	* Collection.cs, ReadOnlyCollection.cs: removed as they are no longer in the b2 API

2005-05-13  Atsushi Enomoto  <atsushi@ximian.com>

	* Queue.cs, Stack.cs: moved from mscorlib.dll

2005-02-35  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* Collections.cs: Changed the code inside IndexOf, for
	the use of Array.IndexOf<>, to keep clean the code.
	
2004-11-17  Carlos Alberto Cortez Guevara <carlos@unixmexico.org>

	* Collections.cs: Avoid the call to Array.Clear () in RemoveItem (),
	now we only assign the last element (the deleted one) to its default
	value.
	
2004-09-20  Gert Driesen <drieseng@users.sourceforge.net>

	* ReadOnlyCollection.cs: Moved over from corlib
	* Collection.cs: Moved over from corlib